ConsultingHub/force-app/main/default/objects/Product_Learning_Detail__c/Product_Learning_Detail__c.object-meta.xml
<CustomObject>
    <label>Product Learning Detail</label>
    <nameField>
        <label>Product Learning Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Learning Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>