ConsultingHub/force-app/main/default/objects/Product_Learning_Detail__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>JIA</fullName>
            </value>
            <value>
                <fullName>TAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>