ConsultingHub/force-app/main/default/objects/Product_Learning_Detail__c/fields/Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>Product_Focus__c</fullName>
    <label>Product Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>